--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/angular.json
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "giorno4Settimana11Angular": {
+    "progettoSettimana11": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/giorno4-settimana11-angular",
+            "outputPath": "dist/progetto-settimana11",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -69,10 +70,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "giorno4Settimana11Angular:build:production"
+              "browserTarget": "progettoSettimana11:build:production"
             },
             "development": {
-              "browserTarget": "giorno4Settimana11Angular:build:development"
+              "browserTarget": "progettoSettimana11:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -80,7 +81,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "giorno4Settimana11Angular:build"
+            "browserTarget": "progettoSettimana11:build"
           }
         },
         "test": {
@@ -96,6 +97,10 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+              "src/styles.scss",
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
