--- a/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/package.json
+++ b/Settimana02-AngularII/ProgettoSettimana11/progettoSettimana11/package.json
@@ -1,23 +1,31 @@
 {
-  "name": "giorno4-settimana11-angular",
+  "name": "progetto-settimana11",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve -o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "json-server": "json-server-auth --watch db.json --port 4201 --delay: 1000",
+    "fullstack": "concurrently \"npm run json-server\" \"npm run start\""
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.0",
+    "@angular/cdk": "^13.0.0",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
     "@angular/forms": "^14.2.0",
+    "@angular/material": "^13.0.0",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@auth0/angular-jwt": "^5.1.2",
+    "bootstrap-icons": "^1.10.5",
+    "concurrently": "^8.2.0",
+    "currently": "^0.0.8",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -28,6 +36,8 @@
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
+    "json-server": "^0.17.3",
+    "json-server-auth": "^2.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
